--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "babel-preset-es2015": "^6.5.0",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
-    "eslint": "^1.10.3",
+    "eslint": "^3.8.1",
     "eslint-config-airbnb": "^5.0.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^3.16.1",
@@ -65,6 +65,8 @@
     "pre-commit": "^1.1.2",
     "sass-loader": "^3.1.2",
     "serve": "^1.4.0",
+    "standard": "^8.4.0",
+    "standard-loader": "^5.0.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
