--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run webpack",
     "test": "npm run lint",
-    "lint": "./node_modules/.bin/standard src",
+    "lint": "./node_modules/.bin/standard --fix src/*.js src/**/*.js",
     "clean-dist": "node ./bin/clean-dist.js",
     "serve-build": "echo 'Serving distribution folder build/dist' && npm run serve-dist",
     "serve-dist": "./node_modules/.bin/serve build/dist",
